Appease chibi HTML parser

--- a/srfi-1.html
+++ b/srfi-1.html
@@ -2604,9 +2604,8 @@ procedure <var>=</var> used to compare keys.
     <code class=
     "proc-def">delete-duplicates&nbsp;&nbsp;</code><var>list [=]
     -&gt; list</var></dt>
-    <dt class="proc-defn proc def"><a name=
-    "delete-duplicates!"></a> <code class=
-    "proc-def">delete-duplicates!&nbsp;</code><var>list [=] -&gt;
+    <dt class="proc-defn proc def"><a name="delete-duplicates!"></a>
+      <code class="proc-def">delete-duplicates!&nbsp;</code><var>list [=] -&gt;
     list</var></dt>
     <dd class="proc-def">
       <code>delete-duplicates</code> removes duplicate elements
