Appease chibi HTML parser

--- a/srfi-1.html
+++ b/srfi-1.html
@@ -3050,8 +3050,7 @@ procedure <var>=</var> used to compare keys.
     <code class=
     "proc-def">lset-union!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</code><var>=
     list<sub>1</sub> ... -&gt; list</var></dt>
-    <dt class="proc-defi proc def"><a name=
-    "lset-intersection!"></a> <code class=
+    <dt class="proc-defi proc def"><a name="lset-intersection!"></a> <code class=
     "proc-def">lset-intersection!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</code><var>=
     list<sub>1</sub> list<sub>2</sub> ... -&gt; list</var></dt>
     <dt class="proc-defi proc def"><a name="lset-difference!"></a>
