Appease chibi HTML parser

--- a/srfi-1.html
+++ b/srfi-1.html
@@ -3061,8 +3061,7 @@ procedure <var>=</var> used to compare keys.
     <code class=
     "proc-def">lset-xor!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</code><var>=
     list<sub>1</sub> ... -&gt; list</var></dt>
-    <dt class="proc-defn proc def"><a name=
-    "lset-diff+intersection!"></a> <code class=
+    <dt class="proc-defn proc def"><a name="lset-diff+intersection!"></a> <code class=
     "proc-def">lset-diff+intersection!&nbsp;</code><var>=
     list<sub>1</sub> list<sub>2</sub> ... -&gt; [list
     list]</var></dt>
